# firebox

./: .gitignore  README.md  boot-firefox.sh  find-required-files-host.sh  find-required-files-wl.sh  find-required-files.sh  firebox.linux.conf  gen-installer.sh  gendev.sh  genimage.sh  geninitrd.sh  geninitrd_cpio.sh  geninitrd_root.sh  genkernel.sh  init_root.sh  mount.sh  mount_without_bind.sh  remove-list.txt  run-qemu-root0.sh  run.sh
busybox/: Makefile  busybox.config
configs/: defconfig  installer.json  run.json  test_installer.json
guest/: emerge.sh  flags.sh  guest-entry.sh
host/: firebox-host.sh
initrd/: init
initrd/etc/X11/xorg.conf.d/: 00-keyboard.conf
initrd/root/: .xinitrc
initrd/root/.config/hypr/: hyprland.conf
initrd/root/.config/waybar/: config
qemu/: install-esp.sh  run-efi.sh  run.sh
tools/: .gitignore  Makefile  firebox-init.c  firebox-server.c  firebox-server.h  genxorgconf.cc  server-test.c
tools/rinit/: Cargo.toml
tools/rinit/src/: main.rs  server.rs
xorg.conf.d/: disable_auto.conf  evdev_kbd.conf
