[package]
name = "rinit"
version = "0.1.0"
edition = "2021"

[dependencies]
tiny_http = "0.11"
"libc" = "0.2"


[profile.release]   # from min-size-rust
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
